powermock FTW?